--- a/vignettes/combiroc_standard.Rmd
+++ b/vignettes/combiroc_standard.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Guide to CombiROC package"
 subtitle: |
-  | Finding optimal combinations of markers from omics data
+  | Selection and ranking of omics biomarkers combinations made easy.  
 author: "Ivan Ferrari, Riccardo L. Rossi"
 date: "`r format(Sys.time(), '%d %B %Y')`"
 output:
@@ -30,7 +30,7 @@ load_all()
 
 Powerful biomarkers are important tools in diagnostic, clinical and research settings. In the area of diagnostic medicine, a biomarker is often used as a tool to identify subjects with a disease, or at high risk of developing a disease. Moreover, it can be used to foresee the more likely outcome of the disease, monitor its progression and predict the response to a given therapy. Diagnostic accuracy can be improved considerably by combining multiple markers, whose performance in identifying diseased subjects is usually assessed via receiver operating characteristic (ROC) curves. The CombiROC tool was originally designed as an easy to use R-Shiny web application to determine optimal combinations of markers from diverse complex omics data ( [Mazzara et al. 2017](https://www.nature.com/articles/srep45477) ); such an implementation is easy to use but has limited features and limitations arise from the machine it is deployed on. The CombiROC _package_ is the natural evolution of the CombiROC tool and it allows the researcher/analyst to freely use the method and further build on it. 
 
-# Standard CombiROC workflow
+# The complete workflow
 
 The aim of this document is to show the whole CombiROC workflow to get you up and running as quickly as possible with this package. To do so we're going to use the proteomic dataset from [Zingaretti et al. 2012](https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3518104/) containing multi-marker signatures for Autoimmune Hepatitis (AIH) for samples clinically diagnosed as “abnormal” (class A) or "normal" (class B). The scope of the workflow is to first find the markers combinations, then to assess their performance in classifying samples of the dataset.
 
@@ -44,7 +44,7 @@ The dataset to be analysed should be in text format, which can be separated by c
 
 - The 1st column must contain unique patient/sample IDs.
 - The 2nd column must contain the class to which each sample belongs.
-- The classes must be exactly TWO and they must be written in character format (i.e. "A" and "B").
+- The classes __must__ be exactly TWO and they __must be labelled with character format with "A"__ (usually the cases) __and "B"__ (usually the controls).
 - From the 3rd column on, the dataset must contain numerical values that represent the signal corresponding to the markers abundance in each sample (marker-related columns).
 - The header for marker-related columns can be called 'Marker1, Marker2, Marker3, ...' or can be called directly with the gene/protein name. __Please note__ that "-" (dash) is __not__ allowed in the column names
 
@@ -62,9 +62,12 @@ The AIH demonstrative dataset is preloaded in the package and can be directly ca
 
 ## Exploring the data
 
-It is usually a good thing to visually explore your data with at least a few plots. Box plots are a nice option to observe the distribution of measurements in each sample. The user can plot the data as she/he wishes using the preferred function: since data for CombiROC are required to be in _wide_ (_untidy_) format, they cannot be plotted directly with the widely used `ggplot()` function. Either the user is free to make the data longer (tidy) for the sole purpose of plotting or the package's `combiroc_long()` function can be used for this purpose; this function wraps the `tidyr::pivot_longer()`function, and it's used to reshape the data in long format. Data in long format are required for the plotting functions of the package and for many other Tidyverse-oriented applications. 
+It is usually a good thing to visually explore your data with at least a few plots.  
+Box plots are a nice option to observe the distribution of measurements in each sample. The user can plot the data as she/he wishes using the preferred function: since data for CombiROC are required to be in _wide_ (_untidy_) format, they cannot be plotted directly with the widely used `ggplot()` function. Either the user is free to make the data longer (_tidy_) for the sole purpose of plotting, or the package's `combiroc_long()` function can be used for this purpose; this function wraps the `tidyr::pivot_longer()`function, and it's used to reshape the data in long format. 
 
-The __data__ object in the original wide format can be thus transformed into the reshaped long format __data_long__ object, and further used. See also the section ["Tips & tricks"](#tips) for some plotting examples.
+Data in long format are required for the plotting functions of the package and for any other Tidyverse-oriented applications. 
+
+The __data__ object in the original wide format can be thus transformed into the reshaped long format __data_long__ object, and further used. See also the section ["Tips & tricks"](#tips) for some plotting examples taking advantage of the reshaped format.
 
 ```{r}
 data_long <- combiroc_long(data)
@@ -73,16 +76,18 @@ data_long
 
 ### Checking the individual markers
 
-Individual markers can also be explored plotting them one by one or retrieving summary statistics. In the section Tips&Tricks at the end of this vignette we suggest code chunks that can be used to [plot intensities of individual markers](#plot_int) across all samples, as well as to [calculate their summary statistics](#sum_stats). 
+Individual markers can also be explored plotting them one by one or retrieving summary statistics. In the section  ["Tips & tricks"](#tips) at the end of this vignette we suggest code snippets that can be used to [plot intensities of individual markers](#plot_int) across all samples, as well as to [calculate their summary statistics](#sum_stats). 
 
 ## Markers distribution overview {#distr}
 
 Since the target of the analysis is the identification of marker combinations capable to correctly classify samples, the user should first choose a signal threshold to define the positivity for a given marker/combination. This threshold should:
 
-- Positively select most samples belonging to the case class ("A" in this case), which values must be above the signal threshold.
-- Negatively select most control samples ("B"), which values must be below the signal threshold. 
+- Positively select most samples belonging to the case class (labelled with "A" in the "Class" column of the dataset), which values must be above the signal threshold.
+- Negatively select most control samples (labelled "B"), which values must be below the signal threshold. 
 
-Usually this threshold is suggested by the guidelines of the kit used for the analysis (e.g. mean of buffer signal + n standard deviations). However, it is a good practice to always check the distribution of signal intensity of the dataset. To help the user with this operation, the `markers_distribution()` have been implemented. This function takes as input data in long format ( __data_long__ ), and returns a named list (here assigned to the __distr__ object). Please note that the only required argument of `markers_distributions()` function is `case_class`, while other arguments have defaults: specific warnings are triggered with this command remembering the users the default threshold parameters that are in place during the computation. 
+Usually this threshold is suggested by the guidelines of the kit used for the analysis (e.g. mean of buffer signal + n standard deviations). However, it is a good practice to always check the distribution of signal intensity of the dataset. To help the user with this operation, the `markers_distribution()` function have been implemented generating a set of discoverable objects.
+
+This function takes as input the data in long format ( __data_long__ ), and returns a named list (here assigned to the __distr__ object). Please note that the only required argument of `markers_distributions()` function is `case_class`, while other arguments have defaults: specific warnings are triggered with this command remembering the users the default threshold parameters that are in place during the computation. 
 
 ```{r}
 distr <- markers_distribution(data_long, case_class = 'A', y_lim = 0.0015, x_lim = 3000, signalthr_prediction = TRUE, min_SE = 40, min_SP = 80, boxplot_lim = 2000)
@@ -92,13 +97,13 @@ distr <- markers_distribution(data_long, case_class = 'A', y_lim = 0.0015, x_lim
 
 The __distr__ object contains the following elements: 
 
-- a Boxplot distribution
-- a ROC curve
-- the curve's coordinates
-- a density plot
-- a summary. 
+- a Boxplot distribution of all single markers
+- a ROC curve for all markers
+- the above curve's coordinates
+- a density plot for case and control classes
+- a summary with a few statistics. 
 
-All this information can be plotted/displayed individually. Let's see each one of them
+Once the `markers_distributions()` function is run, all the abve elements can be plotted or displayed individually. Let's see each one of them
 
 ### Boxplot
 
@@ -109,12 +114,12 @@ distr$Boxplot
 
 ### The ROC curve for all markers and its coordinates
 
-The __ROC__ curve shows how many real positive samples would be found positive (sensitivity, or SE) and how many real negative samples would be found negative (specificity, or SP) in function of signal threshold. NB: these SE and SP are refereed to the signal intensity threshold considering _all_ the markers together; they are _not_ the SE and SP of a single marker/combination computed by the `se_sp()` command further discussed in the **Sensitivity and specificity** paragraph.
+The __ROC__ curve shows how many real positive samples would be found positive (sensitivity, or SE) and how many real negative samples would be found negative (specificity, or SP) in function of signal threshold. Please note that the _False Positive Rate_ (i.e. _1 - specificity_) is plotted on the x-axis. These SE and SP are refereed to the signal intensity threshold considering _all_ the markers together; they are _not_ the SE and SP of a single marker/combination computed by the `se_sp()` function further discussed in the **Sensitivity and specificity** paragraph.
 ```{r, ROC}
 distr$ROC
 ```
 
-The __Coord__ is a dataframe that contains the coordinates of the above described "ROC" (threshold, SP and SE) that have at least a minimun SE (min_SE) and a minimum SP (min_SP): this two threshold are set by default at `min_SE = 40` and `min_SP = 80`, but can be set manually by specifying different values. The Youden index is also computed: this is the Youden's J statistic capturing the performance of a dichotomous diagnostic test, with higher values for better performance ( $J = SE + SP -1$).
+The __Coord__ is a dataframe that contains the coordinates of the above described "ROC" (threshold, SP and SE) that have at least a minimun SE (min_SE) and a minimum SP (min_SP): this two threshold are set by default at `min_SE = 40` and `min_SP = 80`, but they can be set manually by specifying different values. The Youden index is also computed: this is the Youden's J statistic capturing the performance of a dichotomous diagnostic test, with higher values for better performance ( $J = SE + SP -1$).
 ```{r, coord1}
 head(distr$Coord, n=10)
 ```
@@ -124,7 +129,7 @@ head(distr$Coord, n=10)
 The __Density_plot__ shows the distribution of the signal intensity values for both the classes. In addition, the function allows the user to set both the y_lim and x_lim values to provide a better visualization.
 One important feature of the density plot is that it calculates a possible __signal intensity threshold:__ in case of lack of *a priori* knowedge of the threshold the user can set the argument `signalthr_prediction = TRUE` in the `markers_distribution()` function. In this way the function calculates a "suggested signal threshold" that corresponds to the median of the signal threshold values (in __Coord__) at which SE and SP are greater or equal to their set minimal values (min_SE and min_SP). This threshold is added to the "Density_plot" object as a dashed black line and a number. The use of the median allows to pick a threshold whose SE/SP are not too close to the limits (min_SE and min_SP), but it is recommended to always inspect "Coord" and choose the most appropriate signal threshold by considering SP, SE and Youden index.
 
-This suggested signal threshold is to be used as __signalthr__ argument of the `combi()` function (see further).
+This suggested signal threshold can be used as __signalthr__ argument of the `combi()` function further in the workflow.
 
 ```{r, density}
 distr$Density_plot
@@ -140,13 +145,13 @@ distr$Density_summary
 
 ## Combinatorial analysis {#combi}
 
-`combi()` function computes the marker combinations and counts their corresponding positive samples for each class (once thresholds are selected). A sample, to be considered positive for a given combination, must have a value higher than a given signal threshold (signalthr) for at least a given number of markers composing that combination (combithr). 
+`combi()` function works on the dataset initially loaded. It computes the marker combinations and counts their corresponding positive samples for each class (once thresholds are selected). A sample, to be considered positive for a given combination, must have a value higher than a given signal threshold (signalthr) for at least a given number of markers composing that combination (combithr). 
 
-As mentioned before, `signalthr` should be set depending on the guidelines of the kit used for the analysis or by an accurate inspection of signal intensity distribution. In case of lack of such guidelines, one should set the value `signalthr` as suggested by the `distr$Density_plot` as described in the previous section. 
+As mentioned before, `signalthr` should be set depending on the guidelines and characteristics of the methodology used for the analysis or by an accurate inspection of signal intensity distribution. In case of lack of specific guidelines, one should set the value `signalthr` as suggested by the `distr$Density_plot` as described in the previous section. 
 
-In this vignette `signalthr` is set at 450 while `combithr` is set at 1, in order to reproduce the results reported in [Mazzara et. al 2017](https://www.nature.com/articles/srep45477) (the original CombiROC paper) or in [Bombaci & Rossi 2019](https://link.springer.com/protocol/10.1007%2F978-1-4939-9164-8_16) as well as in the tutorial of the web app with default thresholds.
+In this vignette `signalthr` is set at __450__ while `combithr` is set at __1__. We are setting this at 450 (instead of __407__ as suggested by the `distr$Density_plot`) in order to reproduce the results reported in [Mazzara et. al 2017](https://www.nature.com/articles/srep45477) (the original CombiROC paper) or in [Bombaci & Rossi 2019](https://link.springer.com/protocol/10.1007%2F978-1-4939-9164-8_16) as well as in the tutorial of the web app with default thresholds.
 
-`combithr`, instead, should be set exclusively depending on the needed stringency: __1__ is the less stringent and most common choice. The obtained combinations dataframe is assigned to __tab__ dataframe
+`combithr`, instead, should be set exclusively depending on the needed stringency: __1__ is the less stringent and most common choice (meaning that _at least one_ marker in a combination needs to reach the threshold). The obtained __tab__ object is a dataframe of all the combinations obtained with the chosen parameters. 
 
 ```{r}
 tab <- combi(data, signalthr = 450, combithr = 1)
@@ -155,10 +160,10 @@ head(tab, n=20)
 
 ## Sensitivity and specificity {#sesp}
 
-`se_sp()` function calculates:
+Once all the combinations are computed, `se_sp()` function takes as inputs the loaded data `data` and the previously obtained set of combinations (`tab`) to calculate:
 
-- Sensitivity (SE) and specificty (SP) of each combination for each class.
-- The number of markers composing each combination (#Markers). 
+- Sensitivity (SE) and specificity (SP) of each combination for each class;
+- the number of markers composing each combination (#Markers). 
 
 SE of case class ("A") is calculated dividing the number of positive samples by the total sample of case class (% of positive "A" samples), while case class SP is calculated subtracting SE to 100 (% of negative "A" samples).
 
@@ -173,25 +178,24 @@ mks
 ```
 ## Selection of combinations
 
-After specifying the case class ("A" in this case), the function `ranked_combs()` ranks the combinations by the Youden index in order to show the combinations with the highest SE (of cases) and SP (of controls) on the top, facilitating the user in the selection of the best ones. Again, the Youden index (J) is calculated in this way:
+The markers combinations can now be ranked and selected. After specifying the case class ("A" in this case), the function `ranked_combs()` ranks the combinations by the Youden index in order to show the combinations with the highest SE (of cases) and SP (of controls) on the top, facilitating the user in the selection of the best ones. Again, the Youden index (J) is calculated in this way:
 $$
  J = SE+SP-1
 $$
-The user can also set (not mandatory) a minimal value of SE and/or SP that a combination must have to be selected, i.e. to be considered as "gold" combinations.
+The user can also set (not mandatory) a minimal value of SE and/or SP that a combination must have to be selected, i.e. to be considered as _"gold" combinations_.
 
-A possibility to overview how single markers and all combinations are distributed in the SE - SP coordinates is to plot them with the bubble chart code suggested in the Additional Tips&Tricks section (see: [Bubble plot of all combinations](#bubble)) starting from the `mks` dataframe obtained with the `se_sp()` function (see above). 
+A possibility to overview how single markers and all combinations are distributed in the SE - SP ballpark is to plot them with the bubble chart code suggested in the Additional Tips&Tricks section (see: [Bubble plot of all combinations](#bubble)) starting from the `mks` dataframe obtained with the `se_sp()` function (see above).
 
-The bigger the bubble, the more markers are in the combination: looking at the size and distribution of bubbles across SE and SP values is useful to anticipate how effective will be the combinations in the ranking. Setting no cutoffs (i.e. SE = 0 and SP = 0), all single markers and combinations (all bubbles) will be considered and ranked in the next passage.
+The bigger the bubble, the more markers are in the combination: looking at the size and distribution of bubbles across SE and SP values is useful to anticipate how effective will be the combinations in the ranking. Setting no cutoffs (i.e. SE = 0 and SP = 0), all single markers and combinations (all bubbles) will be considered as _"gold" combinations_ and ranked in the next passage.
 
-
-In this the example below the minimal values of SE and SP are set, respectively, to 40 and 80, in order to reproduce the gold combinations selection reported in [Mazzara et. al 2017](https://www.nature.com/articles/srep45477) and in the tutorial of the web app with default thresholds. The obtained values of combinations, ranked according to Youden index, are stored in the "ranked markers" `rmks` object containing the `table` dataframe.
+In the the example below the minimal values of SE and SP are set, respectively, to 40 and 80, in order to reproduce the gold combinations selection reported in [Mazzara et. al 2017](https://www.nature.com/articles/srep45477). The obtained values of combinations, ranked according to Youden index, are stored in the "ranked markers" `rmks` object containing the `table` dataframe and the `bubble_chart` plot that can be accessed individually with the `$` operator.
 
 ```{r}
 rmks <- ranked_combs(data, mks, case_class = 'A', min_SE = 40, min_SP = 80)
 rmks$table
 ```
 
-the `rmks` object also has a slot for the `bubble_chart` plot, that can be recalled with the usual `$` operator. This plot discriminates between combinations not passing the SE and SP cutoffs as set in `ranked_combs()` (blue bubbles) and *gold* combinations passing them (yellow bubbles).  
+as mentioned, the `rmks` object also has a slot for the `bubble_chart` plot, that can be recalled with the usual `$` operator. This plot discriminates between combinations not passing the SE and SP cutoffs as set in `ranked_combs()` (blue bubbles) and _"gold" combinations_ passing them (yellow bubbles).  
 
 ```{r}
 rmks$bubble_chart
@@ -199,21 +203,21 @@ rmks$bubble_chart
 
 ## ROC curves
 
-To allow an objective comparison of combinations, the function `roc_reports()` applies the Generalised Linear Model (`stats::glm()` with argument `family= binomial`) for each selected one. The resulting predictions are then used to compute ROC curves (with function `pROC::roc()`) and their corresponding metrics which are both returned by the function as a named list object (in this case called __reports__).  The function `roc_reports()` requires as input:
+To allow an objective comparison of combinations, the function `roc_reports()` applies the Generalised Linear Model (`stats::glm()` with argument `family= binomial`) for each gold combination. The resulting predictions are then used to compute ROC curves (with function `pROC::roc()`) and their corresponding metrics which are both returned by the function as a named list object (in this case called __reports__).  The function `roc_reports()` requires as input:
 
-- The data object ( __data__ ) obtained with `load_data()`.
-- The table with combinations and corresponding positive samples counts ( __tab__ ), obtained with `combi()`.
+- The data object ( __data__ ) obtained with `load_data()`;
+- the table with combinations and corresponding positive samples counts ( __tab__ ), obtained with `combi()`.
 
-In addition, the user has to specify the class case, the single markers and/or the combinations of interest with the specific function's arguments.  
-In the example below a single marker (Marker1) and two combinations (combinations number 11 and 15) were choosen.
+In addition, the user has to specify the class case, and the single markers and/or the combinations that she/he wants to be displayed with the specific function's arguments.  
+In the example below a single marker ( __Marker1__ ) and two combinations (combinations number __11__ and __15__ ) were choosen.
 ```{r}
 reports <-roc_reports(data, markers_table = tab, case_class = 'A',
                       single_markers =c('Marker1'), selected_combinations = c(11,15))
 ```
 The obtained __reports__ object contains 3 items that can be accessed using the `$` operator:
 
-- Plot: a ggplot object with the ROC curves of the selected combinations.
-- Metrics: a dataframe with the metrics of the roc curves (AUC, opt. cutoff, etc ...).
+- Plot: a ggplot object with the ROC curves of the selected combinations;
+- Metrics: a dataframe with the metrics of the roc curves (AUC, opt. cutoff, etc ...);
 - Models: The list of models that have been computed and then used to classify the samples (the equation for each selected combination).
 
 ```{r}
@@ -224,15 +228,16 @@ reports$Models
 
 ## Results explanation
 
-For a more in deep discussion on how to interpret the results, this section will be focused on "Combination 11" (combining Marker1, Marker2 and Marker3) which has an optimal cutoff equal to 0.216 (see  the __CutOff__ column in `reports$Metrics`) .
-This is the equation used to compute the predictions:
+For a bit deeper discussion on how to interpret the results, this section will be focused on "Combination 11" (combining Marker1, Marker2 and Marker3) which has an optimal cutoff equal to 0.216 (see  the __CutOff__ column in `reports$Metrics`).  
+The following is the equation used to compute the predictions:
 
 $$
 f(x)=β_0+β_1x_1+β_2x_2+ β_3x_3 +...+β_nx_n
 $$
 
 
-Instead, the predicted probabilities have been calculated with the sigmoid function:
+Where β_0 to β_n are the coefficients determined by the model.  
+While, the predicted probabilities have been calculated with the sigmoid function:
 
 $$
 p(x) =  \frac{\mathrm{1} }{\mathrm{1} + e^{-f(x)} }  
@@ -282,17 +287,18 @@ Thus, using 0.216 as cutoff, "Combination 11" is able to classify the samples in
 
 # Classification of new samples
 
-A new feature of the CombiROC package (not present in the CombiROC Tool Shiny app), offers the possibility to exploit the models obtained with `roc_reports()` for each selected marker/combination (models that were assigned to `reports$Models`) to directly classify new samples.
+A new feature of the CombiROC package (not present in the CombiROC tool Shiny app), offers the possibility to exploit the models obtained with `roc_reports()` for each selected marker/combination (and assigned to `reports$Models`) to directly classify new samples that are not labelled, _i.e._ not assigned to any case or control class.
 
-The unclassified dataset must be similar to the dataset used for the previous combinatorial analysis (i.e. of the same nature and with the same markers, but obviously _without_ the 'Class' column).
+The unclassified dataset must be similar to the dataset used for the previous combinatorial analysis ( _i.e._ of the same nature and with the same markers, but obviously _without_ the 'Class' column).
 
 To load datasets with unclassified samples a specific `load_unclassified_data()` function was implemented. This function is analogue to `load_data()` since it loads the same kind of files and it performs the same format checks, with the exception of the _Class_ column which is not present in an unclassified datasets and thus not required.  
 
-For purely dimonstrative purposes, in the following example a "synthetic" unclassified dataset ('data/unclassified_proteomic_data.csv') was used: it was obtained by randomly picking 20 samples from the already classified dataset (the __data__). The loaded unclassified sample is here assinged to the __unc_data__ object. Please note that this dataset has a Patient.ID column which actually allows the identification of the class, but this column is not used in the workflow and has solely labeling purposes.
+For purely dimonstrative purposes, in the following example a "synthetic" unclassified dataset ('data/unclassified_proteomic_data.csv') was used: it was obtained by randomly picking 20 samples from the already classified dataset (the __data__). The loaded unclassified sample is here assinged to the __unc_data__ object.  
+Please note that this dataset has a Patient.ID column which actually allows the identification of the class (a pre-pended "no" tag identifies healthy subjects) __but this column is not used in the workflow and has solely labeling purposes__.
 ```{r, eval=FALSE}
 unc_data <- load_unclassified_data(data = '../data/demo_unclassified_data.csv', sep = ',')
 ```
-This very same dataset has been included in CombiROC package as an unclassified demo dataset, that can be directly called typing `demo_unclassified_data`. 
+This very same dataset has been included in CombiROC package as an unclassified demo dataset, which can be directly called typing `demo_unclassified_data`. 
 ```{r}
 head(demo_unclassified_data)
 ```
@@ -301,20 +307,28 @@ The prediction of the class can be achieved with `classify()`: this function app
 
 This `classify()` function takes as inputs:
 
-- the unclassified dataset containing the new samples to be classified (`unc_data`).
-- the list of models `reports$Models` that have been previously computed by `roc_reports()` (*reports$Models*).
+- the unclassified dataset containing the new samples to be classified (`unc_data`);
+- the list of models `reports$Models` that have been previously computed by `roc_reports()` (*reports$Models*);
 - the list of metrics that have been previously computed by `roc_reports()` (*reports$Metrics*).
 
-In addition the user can set the labels of the predicted class (setting Positive_class and Negative_class), otherwise they will be 1 for positive samples and 0 for the negative samples by default (see the rule shown in the end of the **Results explanation** section).
+In addition the user can set the labels of the predicted class (setting `Positive_class` and `Negative_class`), otherwise they will be __1__ for positive samples and __0__ for the negative samples by default (see the rule shown in the end of the **Results explanation** section). Here we are setting `Positive_class = "affected"` and `Negative_class = "healthy"`
 
-The function returns a named list of data.frames (here assigned to *cl_data*), one for each marker/combination contained in the list of models (*reports$Models*), containing the predicted class for each sample.
-
-To visualize a data.frame containing the classification performed by a model corresponding to a given marker/combination ('Combination 11' in the following example) it is sufficient to 
-call the data.frame list and specify it.
+The function returns a data.frame (`cl_data` in the example below), whose columns contain the predicted class for each sample according to the models used (originally in `reports$Models`); here we are still usign __Marker1__, __Combination 11__ and __Combination 15__. 
 
 ```{r}
 unc_data <- demo_unclassified_data
-cl_data <- classify(unc_data, Models =  reports$Models, Metrics = reports$Metrics, Positive_class = 'A', Negative_class = 'B')
+cl_data <- classify(unc_data, Models =  reports$Models, Metrics = reports$Metrics, Positive_class = "affected", Negative_class = "healthy")
+```
+
+As can be observed comparing the outcome in the dataframe with the tag on samples' names, while the single marker __Marker1__ is not 100% efficient in correctly predicting the class (see second row), both markers combinations are.
+
+```{r}
+cl_data
+```
+
+Thus, each column of the prediction dataframe contains the prediction outcome of a given model and, along with the samples names (in the _index_ column), can be accessed with the $ operator as usual: 
+```{r}
+cl_data$index
 cl_data$`Combination 11`
 ```
 
