--- a/vignettes/combiroc_standard.Rmd
+++ b/vignettes/combiroc_standard.Rmd
@@ -228,42 +228,40 @@ reports$Models
 
 ## Under the hood
 
-For a bit deeper discussion on how to interpret the results, this section will be focused on a single specific combination ("Combination 11"), combining Marker1, Marker2 and Marker3 in the dataset seen so far. This combination has an optimal cutoff equal to 0.216 (see  the __CutOff__ column in `reports$Metrics`).  
-The following is the equation used to compute the predictions:
+For a bit deeper discussion on how to interpret the results, this section will be focused on a single specific combination in the dataset seen so far: "Combination 11", combining Marker1, Marker2 and Marker3. This combination has an __optimal cutoff__ equal to 0.216 (see  the __CutOff__ column in `reports$Metrics`).  
+The following is the regression equation being used by the glm function to compute the predictions:
 
 $$
 f(x)=β_0+β_1x_1+β_2x_2+ β_3x_3 +...+β_nx_n
 $$
 
 
-Where β_0 to β_n are the coefficients determined by the model.  
+Where $β_n$ are the coefficients (being $β_0$ the intercept) determined by the model and $x_n$ the variables.  
 While, the predicted probabilities have been calculated with the sigmoid function:
 
 $$
 p(x) =  \frac{\mathrm{1} }{\mathrm{1} + e^{-f(x)} }  
 $$
 
-
-
-The predictions for "Combination 11" have been computed using the coefficients displayed as in `reports$Models` (see previous paragraph):
+In accordance with the above, the predictions for "Combination 11" have been computed using the coefficients displayed as in `reports$Models` (see previous paragraph), and this combination's prediction equation will be:
 
 $$
 f(x)=    -17.0128  +  1.5378 *log(Marker1 + 1)  +  0.9176 *log(Marker2 + 1) + 0.5706* log(Marker3 + 1)
 $$
 
-Predictions (f(x) values) of 'Combination 11' can be visualized with the following command: 
+As for the predict method for a Generalized Linear Model, predictions are produced on the scale of the additive predictors. Predictions ($f(x)$ values) of Combination 11 can be visualized using the commmand `glm::predict` with argument `type = "link"`: 
 ```{r}
 head(predict(reports$Models$`Combination 11`, type='link')) # link = f(x)
 ```
 
 
-Prediction probabilities (p(x) values) of 'Combination 11' can be instead visualized by typing: 
+Prediction probabilities ($p(x)$ values, i.e. predictions on the scale of the response) of Combination 11 can be instead visualized using argument `type = "response"`: 
 ```{r}
 head(predict(reports$Models$`Combination 11`, type='response')) # response = p(x)
 ```
 
 
-Finally, the comparison between the prediction probability and the optimal cutoff determines the classification of each sample by following this rule:
+Finally, the comparison between the prediction probability and the optimal cutoff (here 0.216, see  the __CutOff__ column for Classification 11 in `reports$Metrics`) determines the classification of each sample by following this rule:
 
 
 $$
@@ -274,20 +272,18 @@ C(x) =
 \end{cases}
 $$
 
-
-
 Specifically, for "Combination 11":
 
-- Samples with p(x) higher than 0.216 are classified as "positives" (1).
-- Samples with p(x) lower or equal to 0.216 are classified as "negatives" (0).
+- Samples with $p(x)$ higher than 0.216 are classified as "positives" (1).
+- Samples with $p(x)$ lower or equal to 0.216 are classified as "negatives" (0).
 
-Thus, using 0.216 as cutoff, "Combination 11" is able to classify the samples in the dataset with a SE equal to 95.0%, SP equal to 86.9%, and accuracy equal to 88.8% (see __ROC curves__, `reports$Metrics`).
+Thus, using 0.216 as cutoff, Combination 11 is able to classify the samples in the dataset with a SE equal to 95.0%, SP equal to 86.9%, and accuracy equal to 88.8% (see __ROC curves__, `reports$Metrics`).
 
 # Classification of new samples
 
-A new feature of the CombiROC package (not present in the CombiROC tool Shiny app), offers the possibility to exploit the models obtained with `roc_reports()` for each selected marker/combination (and assigned to `reports$Models`) to directly classify new samples that are not labelled, _i.e._ not assigned to any case or control class.
+A new feature of the CombiROC package (not present in the CombiROC tool Shiny app), offers the possibility to exploit the models obtained with `roc_reports()` for each selected marker/combination (and assigned to `reports$Models`) to directly classify new samples that are not labelled, _i.e._ __not assigned__ to any case or control classes.
 
-The unclassified dataset must be similar to the dataset used for the previous combinatorial analysis ( _i.e._ of the same nature and with the same markers, but obviously _without_ the 'Class' column).
+The unclassified data set must be similar to the data set used for the previous combinatorial analysis ( _i.e._ of the same nature and with the same markers, but obviously _without_ the 'Class' column).
 
 To load datasets with unclassified samples a specific `load_unclassified_data()` function was implemented. This function is analogue to `load_data()` since it loads the same kind of files and it performs the same format checks, with the exception of the _Class_ column which is not present in an unclassified datasets and thus not required.  
 
