modified the load data examples

--- a/vignettes/combiroc_standard.Rmd
+++ b/vignettes/combiroc_standard.Rmd
@@ -51,14 +51,16 @@ The dataset to be analysed should be in text format, which can be separated by c
 ## Data loading {#load}
 
 The `load_data()` function uses a customized **read.table()** function that checks the conformity of the dataset format. If all the checks are passed, marker-related columns are reordered alphabetically, depending on marker names (this is necessary for a proper computation of combinations), and it imposes "Class" as the name of the second column. The loaded dataset is here assigned to the "*data*" object.
-Please note that `load_data()` takes the semicolumn (";") as default separator: if the dataset to be loaded has a different separator, i.e. a comma (","), is necessary to specify it in the argument `sep`.
+Please note that `load_data()` takes the semicolumn (";") as default separator: if the dataset to be loaded has a different separator, i.e. a comma (","), is necessary to specify it in the argument `sep`. The code below shows how to load a data set contained in the "data" folder (remember to adjust the path according to your current working directory):
 
+```{r, eval=FALSE}
+data <- load_data("./data/demo_data.csv")
+```
+We are going to use an AIH demo data set, that has been included in CombiROC package and can be directly called as `demo_data`. 
 ```{r}
-data <- load_data("./data/demo_data.csv", sep = ";")
+data <- demo_data
 head(data)
 ```
-
-The AIH demonstrative dataset is preloaded in the package and can be directly called typing `demo_data`. 
 
 ## Exploring the data
 
